--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,13 +5,17 @@ author: Gikode <827266641@qq.com>
 homepage: none
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.13.4 <3.0.0"
   flutter: ">=1.17.0 <2.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  oktoast: ^2.3.2   #ANDROID IOS WEB
+  oktoast: ^3.1.1
+  flushbar:
+    git:
+      url: git://github.com/prasadsunny1/flushbar
+      ref: master
 
 dev_dependencies:
   flutter_test:
